# markdown_load

./: .gitignore  README copy.md  deploy.sh  local_dev.py  main.py  markdoownload.md  out.text  out.txt  output_pdf.md  pyproject.toml  requirements.txt  run_local.sh  test.cpp
documents/: 0-CwgMETPBc.transcript.md  0-CwgMETPBc.webm
extension/: animation.js  content-types.js  contentTypes.js  manifest.json  page_capture.js  popup.css  popup.html  popup.js  service_worker.js  utlls.js
scrapers/: article.py  get_audio.py  pdf.py  pdf_fancy.py  substack.py  tweet.py  tweet_playwright.py  youtube.py
substack_exports/_debug/: divyacodes-substack-com-p-coming-soon.html  divyacodes-substack-com-p-intuitive-unix.html  divyacodes-substack-com.html  divyavenn-substack-com-p-happiness-from-the-inside-out.html  divyavenn-substack-com-p-how-to-become-exceptional.html  divyavenn-substack-com-p-how-to-find-your-calling-in-life.html  divyavenn-substack-com-p-it-begins-with-the-body.html
tweet_exports/: karpathy-1973435013875314729.md
tweet_exports/_debug/: divya-venn-status-1973475113824858546.html
