[project]
name = "markdownload"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.114.2",
    "pydantic>=2.11.0",
    "requests>=2.32.5",
    "uvicorn>=0.30.5",
    "bs4>=0.0.1",
    "dotenv>=0.9.9",
    "playwright>=1.55.0",
    "torch>=2.8.0",
    "trafilatura>=1.6.0",
    "marker-pdf>=1.10.1",
    "yt-dlp>=2025.9.26",
    "ffmpeg>=1.4",
    "python-dotenv>=1.0.1",
    "torch>=2.2.0",
    "webvtt-py>=0.4.6",
    "yt-dlp>=2024.8.6",
    "playwright>=1.45.0",
    "pypdf2>=3.0.1",
    "python-multipart>=0.0.20",
    "faster-whisper>=1.2.0",
]
